@@ -1,3 +1,7 @@
+2009-09-15  Kai Tietz  <kai.tietz@onevision.com>
+
+        * time.h: Use of _localtime32, _gmtime32, and _mkgmtime32.
+
 2009-09-11  Kai Tietz  <kai.tietz@onevision.com>
 
 	* winnt.h (FORCEINLINE): Add __attribute__((always_inline)) to
